--- a/myporfolio/package.json
+++ b/myporfolio/package.json
@@ -14,6 +14,7 @@
     "animejs": "^3.2.2",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
+    "lottie-web": "^5.12.2",
     "nuxt": "^3.12.4",
     "three": "^0.167.1",
     "vue": "latest"
