--- a/myporfolio/package.json
+++ b/myporfolio/package.json
@@ -17,7 +17,8 @@
     "lottie-web": "^5.12.2",
     "nuxt": "^3.12.4",
     "three": "^0.167.1",
-    "vue": "latest"
+    "vue": "latest",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
